--- a/TankiFoodAndTravel/Views/Home/Index.cshtml
+++ b/TankiFoodAndTravel/Views/Home/Index.cshtml
@@ -1,31 +1,32 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Food And Travel";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div class="jumbotron" style="background-image:url('../../img/Maldives lead-xlarge.jpg')">
+    <h1>Welcome</h1>
+    <p class="lead">This is a test Application for my blog.</p>
+    <p><a href="https://github.com/ghorui" class="btn btn-primary btn-lg">Github &raquo;</a></p>
+</div>
+<div>
+    <h4>Hit Count : @ViewBag.hitCount</h4>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Travel</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Here you will get Places we visit and Special Foods we cooked or ate from our point of view.
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="@Url.Action("Travel", "Home")">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Foods</h2>
+        <p>We like to cook different cuisines and we like to try different cuisines while we travel. From one who likes almost all types of Food and anoter one who likes to try new food.</p>
+        <p><a class="btn btn-default" href="@Url.Action("Food", "Home")">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+        <h2>US - some views</h2>
+        <p>You can always go and check our Instagram photos and Facebook page.</p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
